@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  santos
+Tag Date:    26 Nov 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131126
+Tag Summary: Getting POP ready for the xlf2003 compiler
+
+Files Modified:
+M       source/hmix_del2.F90
+M       source/hmix_del4.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  klindsay
 Tag Date:    21 Nov 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121a
